# app/Models/Distributor.php
@@ -2,9 +2,14 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Attributes\Fillable;
 use Illuminate\Database\Eloquent\Model;
 
+#[Fillable('name', 'address', 'email', 'phone', 'zone', 'status','is_deleted')]
 class Distributor extends Model
 {
-    //
+    public function addedBy()
+    {
+        return $this->belongsTo(User::class, 'addedBy');
+    }
 }
